--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Grocerease"
+        android:theme="@style/Theme.Grocerease.NoActionBar"
         tools:targetApi="31">
-        <activity
-            android:name=".TestActivity"
-            android:exported="false"
-            android:label="@string/title_activity_test"
-            android:theme="@style/Theme.Grocerease.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
