--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,15 @@
         android:theme="@style/Theme.Grocerease.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".TwoItemCompare"
+            android:exported="false" />
+        <activity
+            android:name=".SingleItemAnalyze"
+            android:exported="false" />
+        <activity
+            android:name=".ScanActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
