Created a DatabaseAddActivity to add more data to the database, current functionality is to press the profile button to access the page. Able to read and write data to the database.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Grocerease.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".DatabaseAddActivity"
+            android:exported="false" />
+        <activity
             android:name=".TwoItemCompare"
             android:exported="false" />
         <activity
