2 item compare page update, parent assignment in manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,11 @@
             android:exported="false" />
         <activity
             android:name=".SingleItemAnalyze"
+            android:parentActivityName=".ScanActivity"
             android:exported="false" />
         <activity
             android:name=".ScanActivity"
+            android:parentActivityName=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
