Able to retrieve from database and popluate the 1item and 2 item pages. Removed swipe animation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,11 @@
             android:exported="false" />
         <activity
             android:name=".TwoItemCompare"
+            android:parentActivityName=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".SingleItemAnalyze"
-            android:parentActivityName=".ScanActivity"
+            android:parentActivityName=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".ScanActivity"
