--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             android:theme="@style/zxing_CaptureTheme"/>
+        <meta-data
+            android:name="com.bumptech.glide.module.AppGlideModule"
+            android:value="com.example.MyAppGlideModule"/>
     </application>
 
 </manifest>
