--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,15 @@
         tools:targetApi="31">
         <activity
             android:name="LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="CreateAccountActivity"
+            android:exported="false"/>
         <activity
             android:name=".DatabaseAddActivity"
             android:exported="false" />
@@ -38,7 +41,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="false">
-
         </activity>
         <activity android:name=".CaptureAct"
             android:screenOrientation="portrait"
