Connected the login activity to the quiz activity and subsequently to the main activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
             android:name="CreateAccountActivity"
             android:exported="false"/>
         <activity
+            android:name=".QuizActivity"
+            android:exported="false"/>
+        <activity
             android:name=".DatabaseAddActivity"
             android:exported="false" />
         <activity
