HistoryActivity implemented successfully, modified History Adapter to know whether it should go to SingleItemAnalyze or TwoItemCompare depending on the current activity name.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
             android:parentActivityName=".MainActivity"
             android:exported="false" />
         <activity
+            android:name=".HistoryActivity"
+            android:parentActivityName=".SingleItemAnalyze"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
         </activity>
