--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,11 @@
             android:parentActivityName=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".HistoryActivity"
+            android:name=".ChooseHistoryActivity"
+            android:parentActivityName=".SingleItemAnalyze"
+            android:exported="false" />
+        <activity
+            android:name=".ChooseFavouritesActivity"
             android:parentActivityName=".SingleItemAnalyze"
             android:exported="false" />
         <activity
