--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,15 +29,11 @@
             android:name=".DatabaseAddActivity"
             android:exported="false" />
         <activity
-            android:name=".TwoItemCompare"
+            android:name=".TwoItemCompareActivity"
             android:parentActivityName=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".SingleItemAnalyze"
-            android:parentActivityName=".MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ScanActivity"
+            android:name=".SingleItemAnalyzeActivity"
             android:parentActivityName=".MainActivity"
             android:exported="false" />
         <activity
@@ -50,17 +46,17 @@
             android:exported="false" />
         <activity
             android:name=".ChooseHistoryActivity"
-            android:parentActivityName=".SingleItemAnalyze"
+            android:parentActivityName=".SingleItemAnalyzeActivity"
             android:exported="false" />
         <activity
             android:name=".ChooseFavouritesActivity"
-            android:parentActivityName=".SingleItemAnalyze"
+            android:parentActivityName=".SingleItemAnalyzeActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
         </activity>
-        <activity android:name=".CaptureAct"
+        <activity android:name=".Utils.CaptureAct"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             android:theme="@style/zxing_CaptureTheme"/>
